<resources>
    <string name="app_name">Errand</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="title_activity_sd">Sign in</string>
    <string name="title_activity_login_activitya">Sign in</string>

    <string name="user_name">用户名</string>
    <string name="example_password">密码</string>
    <string name="land">登陆</string>
    <string name="register">注册</string>
    <string name="task_list">任务列表</string>
    <string name="user_rank">用户排名</string>
    <string name="user_info">个人信息</string>
    <string name="task_info">任务信息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aaa">Sign in</string>
    <string name="title_activity_as">Sign in</string>

</resources>
